# sift-rs

./: .gitignore  Cargo.toml  README.md
sift/: Cargo.toml  README.md
sift/benches/: sift.rs
sift/src/: downsample_x2.rs  gaussian_blur.rs  gaussian_blur.wgsl  lib.rs  main.rs  sift_image.rs
sift/www/: index.html
src/: display.rs  gaussian_blur.rs  lib.rs  main.rs
